--- a/www/promo-action.html
+++ b/www/promo-action.html
@@ -92,10 +92,10 @@
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
+						<div class="item" data-item-summ="7196.74" data-artikul="001"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -105,10 +105,10 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-summ="7196.74" data-artikul="002">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
@@ -119,10 +119,10 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-summ="7196.74"  data-artikul="003">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -135,7 +135,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -148,7 +148,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
