--- a/www/promo-actions.html
+++ b/www/promo-actions.html
@@ -92,10 +92,10 @@
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
+						<div class="item" data-item-summ="7196.74" data-artikul="001"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -105,10 +105,10 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-summ="7196.74" data-artikul="002">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
@@ -119,10 +119,10 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-summ="7196.74" data-artikul="003">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -135,7 +135,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -148,7 +148,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -244,8 +244,8 @@
 <!-- /header -->
 <div class="container content actions">
 	<div class="row">
-		<div class="col-xs-6"></div>
-		<div class="col-xs-6 free-shiping free-shiping-2">
+		<div class="col-xs-12 col-sm-12 col-md-6"></div>
+		<div class="col-xs-12 col-sm-12 col-md-6 free-shiping free-shiping-2">
 			<div class="car">
 				<div>
 					<div class="range"></div>
@@ -283,7 +283,7 @@
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
 	</div>
 	<div class="row goods recent-view">
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -295,7 +295,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
 				<a href="product.html">
@@ -307,7 +307,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -319,7 +319,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -331,7 +331,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -343,7 +343,7 @@
 				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-2">
+		<div class="col-xs-6 col-sm-4 col-md-2">
 			<div class="item">
 				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
 				<a href="product.html">
@@ -361,9 +361,9 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 footer-cols-wrapper">
+			<div class="col-xs-12 col-md-8 footer-cols-wrapper">
 				<div class="row">
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -372,7 +372,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн</a></li>
@@ -381,7 +381,7 @@
 							<li><a href="#">Руководства по покупке</a></li>
 						</ul>
 					</div>
-					<div class="footer-col col-xs-4">
+					<div class="footer-col col-xs-12 col-md-4">
 						<span>Каталог</span>
 						<ul>
 							<li><a href="#">Посмотреть каталог онлайн Посмотреть каталог онлайн</a></li>
@@ -392,7 +392,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-12 col-md-4">
 				<div class="footer-col">
 					<ul class="footer-socials">
 						<li><a href="#"></a></li>
@@ -423,8 +423,8 @@
 <script src="adds/jScrollPane/jquery.mousewheel.js"></script>
 <script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
 <script src="adds/fancybox2/jquery.fancybox.pack.js"></script>
-<script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/packery.pkgd.min.js"></script>
+<script src="js/jquery.touchSwipe.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
