--- a/www/blog.html
+++ b/www/blog.html
@@ -95,7 +95,7 @@
 						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -108,7 +108,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
@@ -122,7 +122,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -135,7 +135,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -148,7 +148,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
