--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -91,41 +91,34 @@
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
-						<div class="item" data-item-summ="7196.74" data-artikul="001"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
+						<div class="item" data-item-artikul="001" data-item-price="3500" data-item-discount-price="3400"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74" data-artikul="002">
+						<div class="item" data-item-artikul="002" data-item-price="4500">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
-								<div>
-									<div class="special-price">3593.37<span> руб</span></div><!-- Special price -->
-									<div class="old-price">3593.37<span> руб</span></div><!-- Old price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74" data-artikul="003">
+						<div class="item" data-item-artikul="003" data-item-price="5500" data-item-discount-price="5400">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
-								<div>
-									<div>3593.37<span> руб</span></div><!-- Normal price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
