--- a/www/cart-2.html
+++ b/www/cart-2.html
@@ -97,7 +97,7 @@
 						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -110,7 +110,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
@@ -124,7 +124,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -137,7 +137,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
@@ -150,7 +150,7 @@
 						<div class="item" data-item-summ="7196.74">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>3593.37 <span>руб</span></div><!-- Normal price -->
