--- a/www/catalog-1.html
+++ b/www/catalog-1.html
@@ -94,7 +94,7 @@
 						<div class="item" data-item-summ="200"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2 <span>шт</span></div>
+							<div class="pcs">2</div>
 							<div class="price">
 								<div>
 									<div>200 <span>руб</span></div><!-- Normal price -->
