--- a/www/catalog-1.html
+++ b/www/catalog-1.html
@@ -91,14 +91,12 @@
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
-						<div class="item" data-item-summ="200"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
+						<div class="item" data-item-artikul="001" data-item-price="200" data-item-discount-price="180">
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
-							<div class="pcs">2</div>
+							<div class="pcs">1</div>
 							<div class="price">
-								<div>
-									<div>200 <span>руб</span></div><!-- Normal price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
