--- a/www/header+footer.html
+++ b/www/header+footer.html
@@ -92,67 +92,56 @@
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item" data-item-summ="7196.74"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
+						<div class="item" data-item-artikul="001" data-item-price="3500" data-item-discount-price="3400">
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2</div>
 							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-artikul="002" data-item-price="3500" data-item-discount-price="3400">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2</div>
 							<div class="price">
-								<div>
-									<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
-									<div class="old-price">3593.37 <span>руб</span></div><!-- Old price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-artikul="003" data-item-price="3500" data-item-discount-price="3400">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2</div>
 							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-artikul="004" data-item-price="3500" data-item-discount-price="3400">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2</div>
 							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="item" data-item-summ="7196.74">
+						<div class="item" data-item-artikul="005" data-item-price="3500" data-item-discount-price="3400">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2</div>
 							<div class="price">
-								<div>
-									<div>3593.37 <span>руб</span></div><!-- Normal price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
