--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -91,7 +91,7 @@
 				<div class="basket-details">
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
-						<div class="item" data-item-artikul="001" data-item-price="3500" data-item-discount-price="3400"> <!-- В этом data-атрибуте укажите полную стоимость этой строки -->
+						<div class="item" data-item-artikul="001" data-item-price="3500" data-item-discount-price="3400">
 							<a href="" class="img" style="background-image: url('images/tovar-1.png');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2</div>
