--- a/www/product.html
+++ b/www/product.html
@@ -92,14 +92,12 @@
 					<div class="basket-details-header">Корзина</div>
 					<div class="basket-details-body">
 						<div class="item">Ваша корзина еще пуста.</div>
-						<div class="item" data-item-summ="200" data-artikul="001">
+						<div class="item" data-item-artikul="001" data-item-price="200">
 							<a href="" class="img" style="background-image: url('images/tovar-2.jpg');"></a>
 							<a href="" class="title">Инициатик - средства против первых морщин длинный текст длинный текст длинный текст</a>
 							<div class="pcs">2<span>шт</span></div>
 							<div class="price">
-								<div>
-									<div>200<span> руб</span></div><!-- Normal price -->
-								</div>
+								<div><!-- Price here (dynamic) --></div>
 							</div>
 							<div class="remove">
 								<a href="#"></a>
