--- a/www/promo-actions.html
+++ b/www/promo-actions.html
@@ -253,13 +253,14 @@
 			</div>
 		</div>
 	</div>
-	<div class="row packery-grid" data-packery='{ "itemSelector": ".packery-grid-item", "gutter": 20 }'>
+	<div class="row packery-grid" data-packery='{ "columnWidth": ".grid-sizer", "itemSelector": ".packery-grid-item", "gutter": 0, "percentPosition": true }'>
+		<div class="grid-sizer"></div>
 		<div class="packery-grid-item"><img src="images/packery-1.jpg" alt="Packery 1"></div>
 		<div class="packery-grid-item"><img src="images/packery-2.jpg" alt="Packery 2"></div>
-		<div class="packery-grid-item"><img src="images/packery-3.jpg" alt="Packery 3"></div>
+		<div class="packery-grid-item width-2"><img src="images/packery-3.jpg" alt="Packery 3"></div>
 		<div class="packery-grid-item"><img src="images/packery-2.jpg" alt="Packery 4"></div>
 		<div class="packery-grid-item"><img src="images/packery-3.jpg" alt="Packery 5"></div>
-		<div class="packery-grid-item"><img src="images/packery-1.jpg" alt="Packery 6"></div>
+		<div class="packery-grid-item width-2"><img src="images/packery-1.jpg" alt="Packery 6"></div>
 		<div class="packery-grid-item"><img src="images/packery-1.jpg" alt="Packery 7"></div>
 		<div class="packery-grid-item"><img src="images/packery-3.jpg" alt="Packery 8"></div>
 	</div>
