--- a/www/cart-1.html
+++ b/www/cart-1.html
@@ -379,12 +379,14 @@
 			</table>
 		</div>
 		<div class="col-xs-12 vertical-line"></div>
-		<div class="col-xs-12 col-sm-12 col-md-6 coupon">
-			<input class="animated-placeholder" type="text" id="coupon" placeholder="Ввести купон на скидку" />
-			<label for="coupon"></label>
-			<input type="button" value="Применить купон" />
-			<div class="coupon-wrong">Вы ввели неверный номер</div>
-			<div class="coupon-success">Спасибо! Купон успешно применен</div>
+		<div class="col-xs-12 col-sm-12 col-md-6">
+			<div class="coupon">
+				<input class="animated-placeholder" type="text" id="coupon" placeholder="Ввести купон на скидку" />
+				<label for="coupon"></label>
+				<input type="button" value="Применить купон" />
+				<div class="coupon-wrong">Вы ввели неверный номер</div>
+				<div class="coupon-success">Спасибо! Купон успешно применен</div>
+			</div>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3"></div>
 		<div class="col-xs-12 col-sm-12 col-md-3">
