Масонри для меню и каталога

--- a/www/catalog-text.html
+++ b/www/catalog-text.html
@@ -262,8 +262,9 @@
 			<div class="row">
 				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
+				</ul>
+				<ul class="col-xs-6 col-sm-6 col-md-3">
+					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -280,8 +281,9 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
+				</ul>
+				<ul class="col-xs-6 col-sm-6 col-md-3">
+					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -291,17 +293,15 @@
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
+				</ul>
+				<ul class="col-xs-6 col-sm-6 col-md-3">
+					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 				</ul>
 				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -575,6 +575,7 @@
 <script src="adds/jScrollPane/jquery.jscrollpane.min.js"></script>
 <script src="adds/fancybox2/jquery.fancybox.pack.js"></script>
 <script src="js/jquery.touchSwipe.min.js"></script>
+<script src="js/masonry.pkgd.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
