Масонри: пофиксил позиционирование

--- a/www/catalog-text.html
+++ b/www/catalog-text.html
@@ -259,7 +259,7 @@
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-8 col-md-9">
-			<div class="row">
+			<div class="row masonry-container">
 				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 				</ul>
@@ -322,7 +322,7 @@
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-8 col-md-9">
-			<div class="row">
+			<div class="row masonry-container">
 				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -388,7 +388,7 @@
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-8 col-md-9">
-			<div class="row">
+			<div class="row masonry-container">
 				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
@@ -451,7 +451,7 @@
 			</div>
 		</div>
 		<div class="col-xs-12 col-sm-8 col-md-9">
-			<div class="row">
+			<div class="row masonry-container">
 				<ul class="col-xs-6 col-sm-6 col-md-3">
 					<a href="#">Третий уровень каталога</a>
 					<li><a href="#">Категория 4 уровня</a></li>
